--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 p{
     color: green;
     border: 5px solid red;
+    background-color: lightblue;
+}
+p:first-child{
+    border: 5px solid black;
 }
